--- a/package.json
+++ b/package.json
@@ -1,22 +1,34 @@
 {
-  "name" : "wgdfreaderbson",
-  "version" : "0.2.49",
-  "description" : "___",
-  "author" : "Kostiantyn Wandalen <wanalen@01.school>",
-  "license" : "MIT",
-  "main" : "proto/wtools/Tools.s",
-  "files" : [ "proto/wtools/___", "proto/wtools/Tools.s" ],
-  "scripts" : { "test" : "wtest .run proto rapidity:-3", "docgen" : "wdocgen .build proto" },
-  "repository" :
-  {
-    "type" : "git",
-    "url" : "https://github.com/Wandalen/wGdfReaderBson.git"
+  "name": "wgdfreaderbson",
+  "version": "0.2.50",
+  "description": "___",
+  "author": "Kostiantyn Wandalen <wanalen@01.school>",
+  "license": "MIT",
+  "main": "proto/wtools/Tools.s",
+  "files": [
+    "proto/wtools/___",
+    "proto/wtools/Tools.s"
+  ],
+  "scripts": {
+    "test": "wtest .run proto rapidity:-3",
+    "docgen": "wdocgen .build proto"
   },
-  "bugs" :
-  {
-    "url" : "https://github.com/Wandalen/wGdfReaderBson/issues"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Wandalen/wGdfReaderBson.git"
   },
-  "dependencies" : { "wTools" : "alpha" },
-  "devDependencies" : { "eslint" : "7.1.0", "wgdfreaderbson" : "file:.", "wTesting" : "alpha" },
-  "keywords" : [ "wTools" ]
+  "bugs": {
+    "url": "https://github.com/Wandalen/wGdfReaderBson/issues"
+  },
+  "dependencies": {
+    "wTools": "alpha"
+  },
+  "devDependencies": {
+    "eslint": "7.1.0",
+    "wTesting": "alpha",
+    "wgdfreaderbson": "file:."
+  },
+  "keywords": [
+    "wTools"
+  ]
 }
