--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wgdfreaderbson",
-  "version": "0.2.66",
+  "version": "0.2.67",
   "description": "___",
   "author": "Kostiantyn Wandalen <wanalen@01.school>",
   "license": "MIT",
@@ -21,11 +21,11 @@
     "url": "https://github.com/Wandalen/wGdfReaderBson/issues"
   },
   "dependencies": {
-    "wTools": "alpha"
+    "wTools": "gamma"
   },
   "devDependencies": {
     "eslint": "7.1.0",
-    "wTesting": "alpha",
+    "wTesting": "gamma",
     "wgdfreaderbson": "file:."
   },
   "keywords": [
